# simplecontrols

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: audio.c  audio.h  brightness.c  brightness.h  main.c  notify.h  settings.h
